# grid

./: README.md  index.html
deep/: README.md  index.html  scenarios.md  summary-med.md
nuclear/: README.md  index.html
water/: README.md  index.html
water/capture/: INTEGRATION.md  INTEGRATION_COMPLETE.md  README.md  index.html  mof_integration.py  requirements.txt
water/capture/realitystream_data/: mof-ai-insights.json  mof-integrated-dataset.csv
water/capture/rust_thermal/: Cargo.toml  README.md
water/capture/rust_thermal/src/: lib.rs
