[package]
name = "mof_thermal_dynamics"
version = "0.1.0"
edition = "2021"
authors = ["DCA Integration Team"]
description = "Thermal-fluid dynamics simulation for Deep-Containment Architecture MOF systems"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
nalgebra = "0.32"  # Linear algebra for numerical simulations
rayon = "1.8"      # Parallel computing
